# tuatpc-2025-spring

./: .gitignore  Dockerfile  PROJECT  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml  upload_statements.yml
628/: problem.toml
628/AC-hisagi/: SOLUTION  main.cpp
628/AC-konpeitoo/: main.cpp
628/AC-uPis/: SOLUTION  main.cpp
628/WA-uPis/: SOLUTION  main.cpp
628/statement/: statement.md
628/tests/: 00_sample_01.md  TESTSET  constraints.hpp  generator.cpp  validator-konpeitoo.cpp  validator-uPis.cpp  validator_hisagi.cpp
TUATPC2024Summer-Heuristic-Admin-ver.-Easy/: PROBLEM  problem.toml
TUATPC2024Summer-Heuristic-Admin-ver.-Easy/AC-MrNegi/: main.cpp
TUATPC2024Summer-Heuristic-Admin-ver.-Easy/AC-Sato/: main.cc
TUATPC2024Summer-Heuristic-Admin-ver.-Easy/AC-Sato-Python/: main.py
TUATPC2024Summer-Heuristic-Admin-ver.-Easy/AC-yuyuyu/: main.cpp
TUATPC2024Summer-Heuristic-Admin-ver.-Easy/test/: TESTSET  (+2 more)
amidakuji/: PROBLEM  problem.toml
common/: testlib.h
docs/: admin.md  appendix.md  docker.md  git.md  rime.md  statements-manager.md
graph/: PROBLEM  problem.toml
ngng-number/: problem.toml  statement.md
scripts/: check_filename.py  check_html.py  constants.py  exceptions.py  pack_testcases.py  parser.py  problem.py  test_all.py  testcase_sets.py  upload_sample_explanations.py  upload_statement.py  upload_statement_and_testcases.py  upload_testcases.py
str-ngng/: PROBLEM  problem.toml  statement.md
swap-conditions/: PROBLEM  problem.toml
teiko/: problem.toml
tuat-summer-hard/: PROBLEM  makezip.py
(+408 files in other folders)
