[project]
name = "tuatpc-2025-spring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "numpy>=2.2.2",
    "rime",
    "statements-manager>=1.7.18",
]

[tool.uv.sources]
rime = { git = "https://github.com/icpc-jag/rime" }
